added favicon and icon pngs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,16 @@ It served as an html document that dynamically inserts React code from your appl
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- website icon that appears at the top of the browser tab -->
+    <link rel="icon" type="image/png" href="/icons/favicon.png" />
+    <!-- information abt the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- page name that appears next to the icon -->
+    <title>PrepPal</title>
   </head>
+
   <body>
+    <!-- root file -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
