implemented choice box component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@ It served as an html document that dynamically inserts React code from your appl
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- page name that appears next to the icon -->
     <title>PrepPal</title>
+    <link rel="stylesheet" href="src/App.css" />
   </head>
 
   <body>
