implemented slider for maximum prep time

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,9 @@ It served as an html document that dynamically inserts React code from your appl
 
   <body>
     <!-- root file -->
-    <div id="root"></div>
+    <div class="background">
+      <div id="root"></div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
